--- a/core/src/main/flex/org/dukecon/views/TrackView.mxml
+++ b/core/src/main/flex/org/dukecon/views/TrackView.mxml
@@ -32,6 +32,8 @@
 
         [Bindable]
         protected var trackIcon:Class;
+        [Bindable]
+        protected var trackName:String;
 
         [Bindable]
         protected var events:ArrayCollection;
@@ -46,11 +48,32 @@
             talkList.addEventListener(ListEvent.ITEM_SELECTED, onTalkSelected);
         }
 
+        [Bindable("dataChange")]
+        override public function get data():Object {
+            return super.data;
+        }
+
+        override public function set data(value:Object):void {
+            super.data = value;
+            track = Track(data);
+            update();
+        }
+
         override protected function commitProperties():void {
             super.commitProperties();
-            track = Track(data);
-            trackIcon = trackController.getIconForTrack(track.id);
-            events = conferenceController.getEventsForTrack(track);
+            update();
+        }
+
+        protected function update():void {
+            if(track && trackController && conferenceController) {
+                trackIcon = trackController.getIconForTrack(track.id);
+                trackName = track.names[resourceManager.localeChain[0]];
+                events = conferenceController.getEventsForTrack(track);
+            } else {
+                trackIcon = null;
+                trackName = null;
+                events = null;
+            }
         }
 
         protected function onTalkSelected(event:ListEvent):void {
@@ -72,7 +95,7 @@
                     </s:fill>
                 </s:Rect>
 
-                <s:Label text="{track.names[resourceManager.localeChain[0]]}" top="22" left="20" width="440" styleName="title"/>
+                <s:Label text="{trackName}" top="22" left="20" width="440" styleName="title"/>
 
                 <s:Rect top="20" right="20" width="120" height="120">
                     <s:fill>
