--- a/core/src/main/flex/org/dukecon/itemrenderer/TrackItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/TrackItemRenderer.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
                 xmlns:s="library://ns.adobe.com/flex/spark"
-                xmlns:u="org.dukecon.utils.*"
+                xmlns:comp="org.dukecon.components.*"
                 xmlns:parsley="http://www.spicefactory.org/parsley"
                 height="136"
                 click="onItemClick(event)">
@@ -70,7 +70,7 @@
         </s:stroke>
     </s:Rect>
 
-    <u:VectorImage source="{trackIcon}" top="8" left="8" width="120" bottom="8"/>
+    <comp:VectorImage source="{trackIcon}" top="8" left="8" width="120" bottom="8"/>
 
     <s:HGroup top="8" left="150" right="18" bottom="8" verticalAlign="middle">
         <s:Label id="itemLabel" text="{trackName}" styleName="listTitle"/>
