--- a/core/src/main/flex/org/dukecon/views/EventView.mxml
+++ b/core/src/main/flex/org/dukecon/views/EventView.mxml
@@ -4,7 +4,7 @@
 -->
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
-        xmlns:u="org.dukecon.utils.*"
+        xmlns:comp="org.dukecon.components.*"
         xmlns:parsley="http://www.spicefactory.org/parsley">
 
     <fx:Metadata>
@@ -176,7 +176,7 @@
                     </s:stroke>
                 </s:Rect>
 
-                <u:VectorImage source="{trackIcon}" top="22" right="100" width="64" height="64"/>
+                <comp:VectorImage source="{trackIcon}" top="22" right="100" width="64" height="64"/>
 
                 <s:Image source="{selectedIcon}" top="20" right="20" click="toggleSelection(event)"/>
 
