--- a/core/src/main/flex/org/dukecon/views/SpeakerView.mxml
+++ b/core/src/main/flex/org/dukecon/views/SpeakerView.mxml
@@ -4,7 +4,7 @@
 -->
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
-        xmlns:u="org.dukecon.utils.*"
+        xmlns:comp="org.dukecon.components.*"
         xmlns:parsley="http://www.spicefactory.org/parsley"
         title="{resourceManager.getString('dukecon', 'speaker.title')}"
         creationComplete="onCreationComplete(event)">
@@ -105,7 +105,7 @@
                     </s:stroke>
                 </s:Rect>
 
-                <u:VectorImage source="{speakerPortrait}" top="22" right="22" width="116" height="116"/>
+                <comp:VectorImage source="{speakerPortrait}" top="22" right="22" width="116" height="116"/>
             </s:Group>
             <s:Label text="{speaker.bio}" styleName="content" width="{UIComponent(parent).width - 20}"/>
             <s:Form width="100%">
