--- a/core/src/main/flex/org/dukecon/views/TrackView.mxml
+++ b/core/src/main/flex/org/dukecon/views/TrackView.mxml
@@ -4,7 +4,7 @@
 -->
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
-        xmlns:u="org.dukecon.utils.*"
+        xmlns:comp="org.dukecon.components.*"
         xmlns:parsley="http://www.spicefactory.org/parsley"
         title="{resourceManager.getString('dukecon', 'track.title')}"
         creationComplete="onCreationComplete(event)">
@@ -106,7 +106,7 @@
                     </s:stroke>
                 </s:Rect>
 
-                <u:VectorImage source="{trackIcon}" top="22" right="22" width="116" height="116"/>
+                <comp:VectorImage source="{trackIcon}" top="22" right="22" width="116" height="116"/>
             </s:Group>
             <s:List id="talkList" width="100%" height="100%"
                     itemRenderer="org.dukecon.itemrenderer.EventItemRenderer"
